--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-/*HEADER*/
+<!--HEADER-->
     <div class="hold">
   <div class="header">
     <div class="container">
