--- a/index.html
+++ b/index.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Graphic Design Website</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body> 
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<title>Graphic Design Website</title>
+	</head>
+	<body>
+		<div class="nav">
+			<div class="container">
+				<nav>
+					<div>
+						<img src="./images/college-logo.jpg" class="logo" />
+					</div>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Tuition & Fees</a></li>
+						<li><a href="#">Location</a></li>
+						<li><a href="#">About</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 
-<!--HEADER-->
-    <div class="hold">
-  <div class="header">
-    <div class="container">
-      <div id="logo">
-        <a class="logo" href ="#"><img src ="college-logo.jpg"></a>
-      </div>
-      <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Tuition & Fees</a></li>
-        <li><a href="#">Location</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+		<header>
+			<div class="header-info">
+				<h1>GRAPHIC DESIGN COLLEGE</h1>
+				<h4>Your Future Starts Here</h4>
+				<button class="btn">Learn More</button>
+			</div>
+		</header>
 
-<!--SECTION--> 
+		<section>
+			<div class="main">
+				<div class="info-section">
+					<h4>What Is a Graphic Design School?</h4>
+					<p>
+						Graphic design, or communication design, is the use of image, text,
+						and media to convey information or ideas. Graphic designers are
+						strategic communicators who design advertisements, book jackets,
+						posters, websites, app interfaces, publishing layouts, album art,
+						logos, and so on and so forth. If you’re creative and innovative,
+						particularly if you’re also interested in technology, graphic design
+						may be a good option for you.
+					</p>
 
-<div class="section">
-  <div class="slider">
-    <div class="container slidercontent">
-      <h1 class="hero">GRAPHIC DESIGN COLLEGE</h1>
-      <h2 class="hero">Your Future Starts Here</h2>
-      <div class="call"><span>Learn More</span></div>
-    </div>
-  </div>
-</div>
+					<p>
+						To become a professional graphic designer, you’ll need a strong
+						portfolio of work to show potential employers, which you could
+						theoretically do on your own or by getting an associate degree. But
+						if you want a fully fleshed-out college experience, a guaranteed
+						strong portfolio, and ready-made industry connections, consider
+						getting a BA or BFA in graphic design or communications design (the
+						name and specific degree type depends on the school).
+					</p>
 
-<!--Welcome Section --> 
+					<p>
+						Graphic design programs can be found both at art schools and as
+						departments within larger universities. They're even found at some
+						technical schools!
+					</p>
 
-<div class="container2">
-    <section id="main">
-        <h1>What Is a Graphic Design School?</h1>
-        <p>Graphic design, or communication design, is the use of image, text, and media to convey information or ideas. 
-        Graphic designers are strategic communicators who design advertisements, book jackets, posters, websites, app interfaces, 
-        publishing layouts, album art, logos, and so on and so forth. 
-        If you’re creative and innovative, particularly if you’re also interested in technology, graphic design may be a good option for you.</p>
+					<p>
+						This list includes graphic design programs of all types, but all are
+						great places to get a graphic design education and to learn the
+						skills you need to launch a design career.
+					</p>
+				</div>
 
-        <p>To become a professional graphic designer, you’ll need a strong portfolio of work to show potential employers, 
-        which you could theoretically do on your own or by getting an associate degree. 
-        But if you want a fully fleshed-out college experience, a guaranteed strong portfolio, and ready-made industry connections, 
-        consider getting a BA or BFA in graphic design or communications design (the name and specific degree type depends on the school).</p>
+				<div class="info-img">
+					<img src="./images/college-logo1.jpg" alt="" class="section-img" />
+				</div>
+			</div>
+		</section>
 
-        <p>Graphic design programs can be found both at art schools and as departments within larger universities. 
-        They're even found at some technical schools!</p>
-
-        <p>This list includes graphic design programs of all types, 
-        but all are great places to get a graphic design education and to learn the skills you need to launch a design career.</p>
-    </section>
-    <aside id="sidebar">
-      <a href ="College Logo"><img src ="college-logo1.jpg"></a>
-    </aside>
-</div>
-
-<!--FOOTER--> 
-
-<footer id="main-footer">
-    <p>Copyright &copy; 2019 Abdifatah Ali</p>
-</footer>
-
-</body>
+		<footer>
+			<div class="container">
+				<p>Copyright &copy; 2019 Abdifatah Ali</p>
+			</div>
+		</footer>
+	</body>
 </html>
