--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="container">
 				<nav>
 					<div>
-						<img src="./images/college-logo.jpg" class="logo" />
+						<img src="/images/college-logo.jpg" class="logo" />
 					</div>
 					<ul>
 						<li><a href="#">Home</a></li>
@@ -69,7 +69,7 @@
 				</div>
 
 				<div class="info-img">
-					<img src="./images/college-logo1.jpg" alt="" class="section-img" />
+					<img src="/images/college-logo1.jpg" alt="" class="section-img" />
 				</div>
 			</div>
 		</section>
